# yati

./: .gitignore  README.md  data.py  main.py  model.py  notebook.ipynb  pyproject.toml  tests.py  tokenizer.py  train.py  utils.py
