[tool.poetry]
name = "yati"
version = "0.1.0"
description = ""
authors = ["jaymody <jaykmody@gmail.com>"]
readme = "README.md"
packages = [{include = "yati"}]

[tool.poetry.dependencies]
python = "^3.9"
jax = {extras = ["cpu"], version = "^0.3.17"}
jaxtyping = "^0.2.5"
tokenizers = "^0.12.1"
datasets = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.2"
isort = "^5.10.1"
ipykernel = "^6.15.3"
ipywidgets = "^8.0.2"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = ["C", "R"]
